ボーリングにいく

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,6 @@
 /algebraic_geometry.synctex.gz
 /algebraic_geometry.toc
 /out
+/algebraic_geometry.idx
+/algebraic_geometry.ilg
+/algebraic_geometry.ind
